# nlq-helpdesk

./: .gitignore  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/src/: config.py  main.py
backend/src/api/: admin.py  analytics.py  chat.py  documents.py  health.py
backend/src/db/: chroma.py  sqlite.py
backend/src/guardrails/: middleware.py
backend/src/models/: audit.py  chat.py  documents.py
backend/src/observability/: logger.py  metrics.py  tracer.py
backend/src/rag/: chunker.py  embeddings.py  pipeline.py  retriever.py
data/faqs/: general-faq.md
data/knowledge_base/: onboarding-guide.md  security-policies.md
data/tickets/: sample-tickets.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/lib/: api.js
frontend/src/pages/: AdminPage.jsx  AnalyticsPage.jsx  ChatPage.jsx  DocumentsPage.jsx
infra/grafana/dashboards/: nlq-helpdesk.json
infra/grafana/provisioning/dashboards/: default.yml
infra/prometheus/: prometheus.yml
